리뷰 반영 1. 인덴트 수정 2. jdk 버전 바꾸기 3. LadderGame 전반적인 수정 4. GameResult 불필요한 필드 제거 및 정적 팩토리 메서드 적용 5. getter/setter 위치 변경