@@ -5,17 +5,19 @@ import domain.gameResult.GameResult;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Ladder {
-
     private static final int FRAME_MIN_LENGTH = 1;
     private static final int HEIGHT_MIN_LENGTH = 1;
+
     private final List<LadderFrameLine> lines;
 
     public Ladder(int frameLength, int height) {
         LadderPrecondition.checkFrameLength(frameLength, FRAME_MIN_LENGTH);
         LadderPrecondition.checkLadderHeight(height, HEIGHT_MIN_LENGTH);
+
         this.lines = generateLines(frameLength, height);
     }
 
@@ -23,7 +25,7 @@ public class Ladder {
         return Stream
                 .generate(() -> new LadderFrameLine(frameLength))
                 .limit(height)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private List<Integer> getBridgeIndexes() {
@@ -34,13 +36,11 @@ public class Ladder {
         return Collections.unmodifiableList(indexes);
     }
 
-    public List<LadderFrameLine> getLines() {
-        return lines;
+    public GameResult getGameResult(List<String> users, List<String> results) {
+        return GameResult.getGameResult(getBridgeIndexes(), users, results);
     }
 
-    public GameResult getGameResult(List<String> users, List<String> results) {
-        GameResult gameResult = new GameResult(users, results);
-        gameResult.makeResult(getBridgeIndexes());
-        return gameResult;
+    public List<LadderFrameLine> getLines() {
+        return lines;
     }
 }
